package Ducks.Ducks;

public interface Duck {
    public void quack();

    public void fly();
}
