package Ducks.Turkeys;

public interface Turkey {
    public void gobble();

    public void fly();
}
