' Generated by UML Generator
' Encoded: bLCzJyCm4DtzAsvCG8cOCw1MwiB0GYin88QBxHOhZbDifr8f_U_OSKZiIgXbYNJlthklvooCHMtxLXBJ2BL7ZIrGYSOihTMYxYr_efrQYoyE3-H3C0vKQ2ev8GCBdb5Ar6pLqmPE1E3-iqVQP7a5Xqum3spbSGhFX0XbkTuYvN2x9hJo_2N3lTCFie8ve1fW7sbKh88Nz-rQ7nU-KAJ9PdhkKxkkhYM_sdNJwuOVaxvsWAenDVLAc5bAoczVSyEDNMbnuE4s9sUG5VGCBGgLeTwP2jRE6hLxUvzB5HFDUhdRCLxt3reOxNBIotbUXMGX5GQwUhVPuN_9ufTKbj-FmTZOz04TZnxZTqKHoAbNSv4Kz_Inodphilpb9j38YsuG3x7WYhbVvmS
' URL: http://www.plantuml.com/plantuml/uml/bLCzJyCm4DtzAsvCG8cOCw1MwiB0GYin88QBxHOhZbDifr8f_U_OSKZiIgXbYNJlthklvooCHMtxLXBJ2BL7ZIrGYSOihTMYxYr_efrQYoyE3-H3C0vKQ2ev8GCBdb5Ar6pLqmPE1E3-iqVQP7a5Xqum3spbSGhFX0XbkTuYvN2x9hJo_2N3lTCFie8ve1fW7sbKh88Nz-rQ7nU-KAJ9PdhkKxkkhYM_sdNJwuOVaxvsWAenDVLAc5bAoczVSyEDNMbnuE4s9sUG5VGCBGgLeTwP2jRE6hLxUvzB5HFDUhdRCLxt3reOxNBIotbUXMGX5GQwUhVPuN_9ufTKbj-FmTZOz04TZnxZTqKHoAbNSv4Kz_Inodphilpb9j38YsuG3x7WYhbVvmS
' Generated on: 2025-12-14T11:07:39.739979

@startuml
skinparam classAttributeIconSize 0
hide circle

class MallardDuck {
  +quack(): void
  +fly(): void
}

interface Duck {
  +quack(): void
  +fly(): void
}

class DuckAdapter {
  -duck: Duck
  -rand: Random
  --
  +DuckAdapter(duck: Duck)
  +gobble(): void
  +fly(): void
}

class TurkeyAdapter {
  -turkey: Turkey
  --
  +TurkeyAdapter(turkey: Turkey)
  +quack(): void
  +fly(): void
}

class TestDrive {
  +{static} main(args: String[]): void
  -{static} testDuck(duck: Duck): void
  -{static} testTurkey(turkey: Turkey): void
}

class WildTurkey {
  +gobble(): void
  +fly(): void
}

interface Turkey {
  +gobble(): void
  +fly(): void
}

MallardDuck ..|> Duck
DuckAdapter ..|> Turkey
DuckAdapter *-- Duck
TurkeyAdapter ..|> Duck
TurkeyAdapter *-- Turkey
TestDrive ..> Duck
TestDrive ..> Turkey
WildTurkey ..|> Turkey
@enduml